--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "commander": "^14.0.0",
     "deepmerge": "^4.3.1",
     "dotenv": "^16.5.0",
+    "listr2": "^8.3.3",
     "open": "^10.1.2",
     "openai": "^5.1.0",
     "typescript": "^5.8.3"
